@@ -9,4 +9,5 @@
     <string name="morning">Morning</string>
     <string name="day">Day</string>
     <string name="evening">Evening</string>
+    <string name="daily_rituals">Daily Rituals</string>
 </resources>
