@@ -10,6 +10,7 @@ Did:
     -Make colours providable to other composables in the tree using CompositionLocalProvider
     -Make MainMenuSub component, to hold different sub menus that are displayable on the main menu
     -Add transparency to ImageButton component, make the day part menu buttons slightly transparent
+    -Remove hardcoded string, allow title of SubMenu now to be passed as param
 
 06-04-2024
 Streak: 14
